# rust-ticketing

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
db/: schema.sql
src/: config.rs  main.rs  routes.rs
src/helpers/: actix.rs  config.rs  error.rs  init.rs  jwt.rs  mod.rs
src/migrations/: V1__initial.rs  V2__play_with_barrel.rs  V3__drop_table.rs
src/routes/: mod.rs  ping.rs  reservation.rs  users.rs
src/services/: hello.rs  ping.rs  reservation.rs  users.rs
src/services/sql/: create_user.sql  reserve_ticket.sql
