[package]
name = "rust-ticketing"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.5"
color-eyre = "0.5.11"
config = "0.11.0"
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
eyre = "0.6.5"
serde = "1.0.127"
tokio-postgres = "0.7.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
