[package]
name = "rust-ticketing"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
barrel = { version = "0.6.5", features = ["pg"] }
color-eyre = "0.5.11"
config = "0.11.0"
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
eyre = "0.6.5"
refinery = { version = "0.6.0", features = ["tokio-postgres"] }
serde = "1.0.127"
tokio-postgres = "0.7.2"
tracing = "0.1.26"
tracing-actix-web = "0.4.0-beta.9"
tracing-error = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
